# gladiator

./: .pre-commit-config.yaml  Food.py  README.md  gladiator.py  ingredients.json  macro_tracker.py  main.py  meals.json  pyproject.toml  requirements.txt
config/: settings.py
data/: database.py  michael.csv  test.csv
