[project]
name = "gladiator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "numpy>=2.3.4",
    "pydantic-settings>=2.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 79
